--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,10 @@
 
         <header style="max-width: 100vw;">
             <svg class="background p-0" id="background" viewBox="0 0 1850 1080" preserveAspectRatio="xMidYMax slice">
-                <image width="1920" height="1080" preserveAspectRatio="xMidYMid slice" class="" xlink:href="O/BG-3.png" id="image10" fetchpriority="high"/>
+                <image width="1920" height="1080" preserveAspectRatio="xMidYMid slice" href="O/BG-3.png" id="image10" fetchpriority="high"/>
             </svg>
             <svg class="foreground p-0" id="foreground" viewBox="0 0 1850 1080" preserveAspectRatio="xMidYMax slice">
-                <image width="1920" height="1080" preserveAspectRatio="xMidYMid slice" class="" xlink:href="O/V3.png" id="image10" fetchpriority="low"/>
+                <image width="1920" height="1080" preserveAspectRatio="xMidYMid slice" href="O/V3.png" id="image10" fetchpriority="low"/>
             </svg>
             <div class="message vw-100 mx-auto text-center" style="max-width: 100vw;">
                 <h1 id="title" t="Navrátil">Navrátil</h1>
