--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
 
         <!-- About-->
         <section class="about-section text-center pt-5 min-vh-100" id="about" style="max-width: 100vw;">
-            <div class="container px-1 mx-auto">
+            <div class="containers px-1 mx-auto">
                 <div class="crt">
                     <h2 class="content-about content-animation mb-3 mt-5 mx-auto ramecek">O mně</h2>
                 </div>
@@ -108,7 +108,7 @@
         </section>
     <!-- Exp-->
         <section class="projects-section pt-5 min-vh-100" id="zkusenosti" style="max-width: 100vw;">
-            <div class="container px-2 text-center">
+            <div class="containers px-2 text-center">
                 <div class="crt">
                     <h2 class="content-exp content-animation mb-5 mt-5 px-5 ramecek">Zkušenosti</h2>
                 </div>    
@@ -329,14 +329,14 @@
         </section>
     <!--Projects-->
         <section class="projekty-section pt-5 min-vh-100" id="projekty" style="max-width: 100vw;">
-            <div class="container-fluid px-2 px-lg-5 text-center" style="max-width: 100vw;">
+            <div class="containers mx-auto px-2 text-center">
                 <div class="crt">
                     <h2 class="content-pro content-animation mb-5 mt-5 px-5 ramecek">Projekty</h2>
                 </div>
-                <div class="row my-md-5 justify-content-evenly" style="max-width: 100vw;">
+                <div class="row my-md-5 justify-content-evenly px-0 mx-2" style="max-width: 100vw;">
                     <!--Pro-one-->
-                    <div class="col-md-4 content-pro-1 content-animation px-0 px-md-0 px-lg-3 mx-0">
-                        <div class="project-card project-three p-0 m-5">
+                    <div class="col-md-4 content-pro-1 content-animation px-0 px-md-4 px-lg-5 mx-0">
+                        <div class="project-card project-three p-0 m-5 mx-auto">
                             <h3 class="crt">NS-Store</h3>
                             <h5></h5>
                             <p class="h-100 d-flex align-content-center mx-3">
@@ -346,8 +346,8 @@
                         </div>
                     </div>   
                     <!--Pro-two--> 
-                    <div class="col-md-4 content-pro-2 content-animation px-0 px-md-0 px-lg-3 mx-0">
-                        <div class="project-card project-one p-0 m-5">
+                    <div class="col-md-4 content-pro-2 content-animation px-0 px-md-4 px-lg-5 mx-0">
+                        <div class="project-card project-one p-0 m-5 mx-auto">
                             <h3 class="crt">Pojištění</h3>
                             <h5></h5>
                             <p class="h-100 d-flex align-content-center mx-3">
@@ -358,8 +358,8 @@
                         </div>
                     </div>
                     <!--Pro-three-->           
-                    <div class="col-md-4 content-pro-3 content-animation px-0 px-md-0 px-lg-3 mx-0">
-                        <div class="project-card project-two p-0 m-5">
+                    <div class="col-md-4 content-pro-3 content-animation px-0 px-md-4 px-lg-5 mx-0">
+                        <div class="project-card project-two p-0 m-5 mx-auto">
                             <h3 class="crt">CoTest</h3>
                             <h5></h5>
                             <p class="h-100 d-flex align-content-center mx-3">
@@ -373,7 +373,7 @@
         </section>
     <!-- Kontakt-->
         <section class="signup-section pt-5 min-vh-100 " id="contact" style="max-width: 100vw;">
-            <div class="container px-2 ms-1 text-center" style="max-width: 100vw;">
+            <div class="containers px-2 ms-1 text-center" style="max-width: 100vw;">
                 <div class="crt">
                     <h2 class="content-contact content-animation my-4 my-sm-5 mx-auto ramecek text-white">Kontakt</h2>
                 </div>
@@ -387,7 +387,7 @@
                             <a class="m-4" href="https://github.com/Ravegnar"><img class="" src="O/HUB.png" alt=""></a>
                             <a class="linked position-absolute end-0 me-2 me-sm-3" href="https://www.linkedin.com/in/luk%C3%A1%C5%A1-navr%C3%A1til-54238424b/"><img class="" src="O/LINK.png" alt=""></a><br>
                             <h2 class="mx-auto align-self-center shaker">Username:<br><div class="crt my-1"> Lukáš Navrátil</div></h2><br>
-                            <div class="container d-flex flex-wrap justify-content-center px-3 px-sm-5 px-md-5">
+                            <div class="containers d-flex flex-wrap justify-content-center px-3 px-sm-5 px-md-5">
                                 <div class="row flex-row w-100">
                                     <p class="col-12 col-sm-auto mb-2">Email:</p>
                                     <p class="col-12 col-sm-auto text-sm-end ms-auto mb-sm-2">Asantir@email.cz</p>
@@ -402,6 +402,36 @@
                 </div>
             </div>
         </section>
+<!--
+        <div class="skill-tree">
+            <div class="skill-body">
+                <div class="skill div1"><img src="O/HTML.png" class="img-fluid" alt=""></div>
+                <div class="skill div2"><img src="O/GIT.png" class="img-fluid" alt=""></div>
+                <div class="skill div3"><img src="O/JS.png" class="img-fluid" alt=""></div>
+                <div class="skill div4"><img src="O/CSS.png" class="img-fluid" alt=""></div>
+                <div class="skill div5"><img src="O/PHOT.png" class="img-fluid" alt=""></div>
+                <div class="skill div6"><img src="O/NODE.png" class="img-fluid" alt=""></div>
+                <div class="skill div7"><img src="O/REACT.png" class="img-fluid" alt=""></div>
+                <div class="skill div8"><img src="O/TYPE.png" class="img-fluid" alt=""></div>
+                <div class="skill div9"><img src="O/BOOT.png" class="img-fluid" alt=""></div>
+                <div class="skill div10"><img src="O/FIRE.png" class="img-fluid" alt=""></div>
+                <div class="skill div11"><img src="O/REDU.png" class="img-fluid" alt=""></div>
+                <div class="skill div12"><img src="O/TAIL.png" class="img-fluid" alt=""></div>
+
+                <div class="div13"><img src="O/VR.png" class="img-fluid" alt=""></div>
+                <div class="div14"><img src="O/VL.png" class="img-fluid" alt=""></div>
+                <div class="div15"><img src="O/VP.png" class="img-fluid" alt=""></div>
+                <div class="div16"><img src="O/VR.png" class="img-fluid" alt=""></div>
+                <div class="div17"><img src="O/VL.png" class="img-fluid" alt=""></div>
+                <div class="div18"><img src="O/VD.png" class="img-fluid" alt=""></div>
+                <div class="div19"><img src="O/VP.png" class="img-fluid" alt=""></div>
+                <div class="div20"><img src="O/VD.png" class="img-fluid" alt=""></div>
+                <div class="div21"><img src="O/VD.png" class="img-fluid" alt=""></div>
+                <div class="div22"><img src="O/VD.png" class="img-fluid" alt=""></div>
+                <div class="div23"><img src="O/VD.png" class="img-fluid" alt=""></div>
+            </div>
+        </div>
+-->
 
         </div>
         </div>
