--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                         <p class="text-white mb-4 px-md-5">
                             Ahoj, jmenuji se Lukáš Navrátil a jsem junior Frontend developer, co má chuť pracovat a učit se nové věci.<br>
                             <br>Tento web není ve finální fázi a stejně tak projektové aplikace jsou spíše v beta verzi, takže jde spíš o funkčnost než o vzhled. Rád bych všechny ty věci přepsal a dodělal vše do pidi detailu + tvořil a učil se nové věci, ale chtělo by to mít více času nebo nemít strach z předávkování kofeinem &#128556; <br>
-                            <br>Aktuálně hledám práci + pracuji na NS-Store - nově přepsáno do Typescriptu + Reduxu.
+                            <br><strong>Aktuálně hledám práci + spolupracuji s <a href="https://www.webzahubicku.cz/">Webzahubičku.cz</a></strong>
                         </p>
                         <div>
                             <h4 class="text-white mb-3">Minulá zaměstnání</h4>
@@ -119,14 +119,15 @@
                     <div class="col-1 content-exp-2 content-animation delay-55 px-0 mx-2 text-center exp-ico"><img src="O/NODE.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">NodeJS</p></div>
                     <div class="col-1 content-exp-2 content-animation delay-6 px-0 mx-2 text-center exp-ico"><img src="O/REACT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">React</p></div>
                     <div class="col-1 content-exp-2 content-animation delay-65 px-0 mx-2 text-center exp-ico"><img src="O/REDU.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Redux</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-7 px-0 mx-2 text-center exp-ico"><img src="O/TYPE.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Typescript</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-75 px-0 mx-2 text-center exp-ico"><img src="O/HTML.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">HTML</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-8 px-0 mx-2 text-center exp-ico exp-css"><img src="O/CSS.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">CSS</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-85 px-0 mx-2 text-center exp-ico"><img src="O/BOOT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Bootstrap</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-9 px-0 mx-2 text-center exp-ico"><img src="O/TAIL.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Tailwind</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-95 px-0 mx-2 text-center exp-ico"><img src="O/PHOT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Photoshop</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-10 px-0 mx-2 text-center exp-ico"><img src="O/FIRE.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">FireBase API</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-105 px-0 mx-2 text-center exp-ico"><img src="O/GIT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">GIT</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-7 px-0 mx-2 text-center exp-ico"><img src="O/NEXT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Next</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-75 px-0 mx-2 text-center exp-ico"><img src="O/TYPE.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Typescript</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-8 px-0 mx-2 text-center exp-ico"><img src="O/HTML.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">HTML</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-85 px-0 mx-2 text-center exp-ico exp-css"><img src="O/CSS.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">CSS</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-9 px-0 mx-2 text-center exp-ico"><img src="O/BOOT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Bootstrap</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-95 px-0 mx-2 text-center exp-ico"><img src="O/TAIL.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Tailwind</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-10 px-0 mx-2 text-center exp-ico"><img src="O/PHOT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Photoshop</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-105 px-0 mx-2 text-center exp-ico"><img src="O/FIRE.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">FireBase API</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-110 px-0 mx-2 text-center exp-ico"><img src="O/GIT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">GIT</p></div>
                 </div>
                 <h1 class="content-exp-3 content-animation text-white">Kurzy</h1>
                 <div class="row d-flex mx-2 justify-content-evenly">
