--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,8 @@
                     <div class="col-11 ramecek-big py-5 px-4 mx-2 mx-sm-4 mx-md-5 my-3 my-sm-4 my-lg-5">
                         <p class="text-white mb-4 px-md-5">
                             Ahoj, jmenuji se Lukáš Navrátil a jsem junior Frontend developer, co má chuť pracovat a učit se nové věci.<br>
+                            <br><strong>Aktuálně hledám práci + spolupracuji s <a href="https://www.webzahubicku.cz/">Webzahubičku.cz</a></strong><br>
                             <br>Tento web není ve finální fázi a stejně tak projektové aplikace jsou spíše v beta verzi, takže jde spíš o funkčnost než o vzhled. Rád bych všechny ty věci přepsal a dodělal vše do pidi detailu + tvořil a učil se nové věci, ale chtělo by to mít více času nebo nemít strach z předávkování kofeinem &#128556; <br>
-                            <br><strong>Aktuálně hledám práci + spolupracuji s <a href="https://www.webzahubicku.cz/">Webzahubičku.cz</a></strong>
                         </p>
                         <div>
                             <h4 class="text-white mb-3">Minulá zaměstnání</h4>
@@ -127,7 +127,7 @@
                     <div class="col-1 content-exp-2 content-animation delay-95 px-0 mx-2 text-center exp-ico"><img src="O/TAIL.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Tailwind</p></div>
                     <div class="col-1 content-exp-2 content-animation delay-10 px-0 mx-2 text-center exp-ico"><img src="O/PHOT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">Photoshop</p></div>
                     <div class="col-1 content-exp-2 content-animation delay-105 px-0 mx-2 text-center exp-ico"><img src="O/FIRE.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">FireBase API</p></div>
-                    <div class="col-1 content-exp-2 content-animation delay-110 px-0 mx-2 text-center exp-ico"><img src="O/GIT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">GIT</p></div>
+                    <div class="col-1 content-exp-2 content-animation delay-11 px-0 mx-2 text-center exp-ico"><img src="O/GIT.png" class="img-fluid mb-3 mb-md-4" alt=""><p class="mb-0">GIT</p></div>
                 </div>
                 <h1 class="content-exp-3 content-animation text-white">Kurzy</h1>
                 <div class="row d-flex mx-2 justify-content-evenly">
